--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
+    "@types/react-big-calendar": "^1.8.10",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.4",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
