--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_NAVER_CLIENT_ID=QHhUSu5erWnOJJnjpFXj
-REACT_APP_NAVER_CLIENT_SECRET=61bYSiWzjU
-REACT_APP_CLOVA_STUDIO_API_KEY=ya88Ty2AcaVZDn63tg3cufQNfPRR2K7Y0sdWvzHB
-REACT_APP_NAVER_APIGW_API_KEY=ya88Ty2AcaVZDn63tg3cufQNfPRR2K7Y0sdWvzHB
+REACT_APP_NAVER_CLIENT_ID=**
+REACT_APP_NAVER_CLIENT_SECRET=**
+REACT_APP_CLOVA_STUDIO_API_KEY=**
+REACT_APP_NAVER_APIGW_API_KEY=**
